--- a/TechnicalSolution/FrontEnd/TechnicalSolution.WEB/Views/JobBoard/Form.cshtml
+++ b/TechnicalSolution/FrontEnd/TechnicalSolution.WEB/Views/JobBoard/Form.cshtml
@@ -2,10 +2,10 @@
 
 @model TechnicalSolution.EL.JobBoard
     
-<form asp-action="EjecutarTransaccion" autocomplete="off">
+<form asp-action="ExecuteTransaction" autocomplete="off">
     @Html.HiddenFor(e => e.Id)
     @Html.HiddenFor(e => e.CreatedAt)
-    @Html.Hidden("tipoTransaccion", ViewData["Action"])
+    @Html.Hidden("transactionType", ViewData["Action"])
     <div class="card">
         <div class="card-header">
             <h5 style="text-align:center;">@ViewData["Action"]</h5>
