--- a/TechnicalSolution/FrontEnd/TechnicalSolution.WEB/Views/JobBoard/Index.cshtml
+++ b/TechnicalSolution/FrontEnd/TechnicalSolution.WEB/Views/JobBoard/Index.cshtml
@@ -26,7 +26,7 @@
                         <td>@item.CreatedAt.ToString("dd/MM/yyyy")</td>
                         <td>@item.ExpiresAt.ToString("dd/MM/yyyy")</td>
                         <td>
-                            <a asp-action="Formulario" class="btn btn-outline-primary" asp-route-id="@item.Id">Edit</a>
+                            <a asp-action="Form" class="btn btn-outline-primary" asp-route-id="@item.Id">Edit</a>
                             <a asp-action="Delete" class="btn btn-outline-primary" asp-route-id="@item.Id">Delete</a>
                         </td>
                     </tr>
@@ -34,7 +34,7 @@
             </tbody>
         </table>
     </div>
-    <a class="btn btn-outline-primary" asp-action="Formulario">New Record</a>
+    <a class="btn btn-outline-primary" asp-action="Form">New Record</a>
 </div>
 @section Scripts
 {
